refacotr block miner

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
 			"name": "Server-TestPeroid",
 			"type": "node",
 			"request": "launch",
-			"args": ["${workspaceRoot}/packages/chopsticks/src/cli.ts", "--build-block-mode", "3", "--build-block-period", "12", "--endpoint", "wss://acala-rpc-2.aca-api.network/ws"],
+			"args": ["${workspaceRoot}/packages/chopsticks/src/cli.ts", "--miner-mode", "3", "--miner-interval", "12", "--endpoint", "wss://acala-rpc-2.aca-api.network/ws"],
 			"runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
 			"sourceMaps": true,
 			"cwd": "${workspaceRoot}",
